--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ header{
     color: #ffffff;
     padding-top: 30px;
     min-height: 70px;
-    border-bottom: #0F3D3E 3px solid;
+    border-bottom: #e8491d 3px solid;
 }
 
 header a{
@@ -132,9 +132,18 @@ header a:hover{
     height: auto;
 }
 
+#contacto{
+    background-color: #395B64;
+    padding: 5px;
+    text-align: center;
+    color: #ffffff;
+    margin-top: 30px;
+    border-bottom: #e8491d 3px solid;
+}
+
+
 footer{
     padding: 10px;
-    margin-top: 15px;
     color: #ffffff;
     background-color: #0F3D3E;
     text-align: center;
